# NLPMed-Engine

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  README.md  TERMS.md  genindex.html  index.html  modules.html  nlpmed_engine.api.html  nlpmed_engine.components.html  nlpmed_engine.data_structures.html  nlpmed_engine.html  nlpmed_engine.pipelines.html  nlpmed_engine.service  nlpmed_engine.utils.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml  docs.yml
.reuse/templates/: agplv3.jinja2
_sources/: index.rst.txt  modules.rst.txt  nlpmed_engine.api.rst.txt  nlpmed_engine.data_structures.rst.txt  nlpmed_engine.rst.txt
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  modules.rst  nlpmed_engine.api.rst  nlpmed_engine.components.rst  nlpmed_engine.data_structures.rst  nlpmed_engine.pipelines.rst  nlpmed_engine.rst  nlpmed_engine.utils.rst
nlpmed_engine/: about.py
nlpmed_engine/api/: main.py  mappers.py  models.py  routes.py
nlpmed_engine/components/: duplicate_checker.py  encoding_fixer.py  joiner.py  ml_inference.py  note_filter.py  pattern_replacer.py  section_filter.py  section_splitter.py  sentence_expander.py  sentence_filter.py  sentence_segmenter.py  word_masker.py
nlpmed_engine/data_structures/: note.py  patient.py  section.py  sentence.py
nlpmed_engine/pipelines/: base_pipeline.py  batch_pipeline.py  single_pipeline.py
nlpmed_engine/utils/: __init__.py  utils.py
notebooks/: 01_single_pipeline_vte.ipynb  02_batch_pipeline_vte.ipynb
requirements/: base_after.txt  base_before.txt  cpu.txt  dev.txt  gpu_apple.txt  gpu_cuda.txt  gpu_cuda11.txt  gpu_cuda12.txt
scripts/: run_api.py  run_pipeline.py
tests/: conftest.py  test_api.py
tests/test_components/: test_duplicate_checker.py  test_encoding_fixer.py  test_joiner.py  test_ml_inference.py  test_note_filter.py  test_pattern_replacer.py  test_section_filter.py  test_section_splitter.py  test_sentence_expander.py  test_sentence_filter.py  test_sentence_segmenter.py  test_word_masker.py
tests/test_performance/: test_batch_pipeline_performance.py  test_single_pipeline_performance.py
tests/test_pipelines/: test_base_pipeline.py  test_batch_pipeline.py  test_single_pipeline.py
